Ultimo cambios de estilos

--- a/app/assets/stylesheets/guardarropas.scss
+++ b/app/assets/stylesheets/guardarropas.scss
@@ -245,15 +245,15 @@ img {
 
 
   .guardarropas-all {
-    margin: 30px 8%;
-    margin-right: 5px;
+    margin: 30px 0%;
+    //margin-right: 5px;
     flex-direction: row;
     justify-content: space-around;
     text-align: center;
   }
 
   .guardarropa-unit {
-    padding: 10px 10% 10px 0;
+    padding: 10px 0% 10px 0;
     text-align: center;
     align-items: center;
   }
