--- a/app/assets/stylesheets/password_resets.scss
+++ b/app/assets/stylesheets/password_resets.scss
@@ -81,3 +81,38 @@ img {
   font-size: 1.5em;
   text-transform: uppercase;
 }
+
+@media(min-width:650px) {
+
+  .btn-reset{
+
+    width: 20%;
+  }
+
+  .reset-form{
+    margin: 0px 30%;
+  }
+
+
+}
+
+@media(min-width:1200px) {
+
+  .btn-reset{
+
+    width: 10%;
+  }
+
+  .reset-form{
+    margin: 0px 40%;
+  }
+  .reset-items{
+    width: 100%;
+
+
+  }
+
+
+}
+
+
