--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -114,7 +114,6 @@ img {
   color: #4e0d3a;
 }
 
-//////////////
 
 
 //USERS
@@ -157,7 +156,6 @@ table {
   font-size: 1.5em;
   text-align: center;
 }
-////////
 
 .pagination-div{
   display: flex;
@@ -178,6 +176,10 @@ padding-right: 17px;
   font-size: 1.5em;
   text-transform: uppercase;
 }
+.btn-go-back-signup a{
+  color: #4e0d3a;
+}
+
 
 
 @media (min-width:650px) {
