--- a/app/views/guardarropas/show.html.erb
+++ b/app/views/guardarropas/show.html.erb
@@ -2,7 +2,7 @@
   <div class="btn-go-back-guardarropa">
     <a href="/profile"><i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i></a>
   </div>
-  <h2 class="prendas-title"><%= @guardarropa.nombre %></h2>
+  <h2 class="guarda-title"><%= @guardarropa.nombre %></h2>
 
   <div class="show-btns-container">
     <a class="btn-atuendos-all" type="button" href="/guardarropas/<%= @guardarropa.id %>/atuendos">Ver atuendos</a>
