--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -55,7 +55,7 @@ img {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  padding-bottom: 0;
+  padding-bottom: 10%;
   max-width: 300px;
 }
 
@@ -70,11 +70,12 @@ img {
 }
 
 .text-no-atuendo{
-  font-size: 2.5em;
+  font-size: 1.7em;
   text-align: center;
   color: #e30425;
   font-family: 'Roboto', sans-serif;
-  margin-top: 10%;
+  margin: 10% 9%;
+
 }
 
 .btn-random-container{
@@ -248,6 +249,19 @@ img {
   margin: 10px 43%;
 
 
+}
+
+.guarda-title{
+  font-size: 4em;
+  font-weight: 600;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  color: #4e0d3a;
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
 
