Arreglando errores de estilos actualizar pass

--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -6,7 +6,7 @@
     <p id="alert"> <%=alert%> </p>
     <div class="reset-form">
       <%= form.password_field :password ,:placeholder => 'Nueva contraseña',:class=>'reset-items'%>
-      <%= form.password_field :password_confirmation, :placeholder => 'Confirma la nueva contraseña',:class=>'reset-items'%>
+      <%= form.password_field :password_confirmation, :placeholder => 'Confirmar la nueva contraseña',:class=>'reset-items'%>
     </div>
     <div class="reset-buttons">
       <%=form.submit "Enviar", class: "btn-reset"%>
