--- a/app/assets/stylesheets/password_resets.scss
+++ b/app/assets/stylesheets/password_resets.scss
@@ -34,6 +34,11 @@ img {
   flex-direction: column;
   align-items: center;
   font-family: 'Barlow Semi Condensed', sans-serif;
+  background: white;
+}
+
+#reset-section form{
+  margin: 0px 28px;
 }
 
 .reset-title{
@@ -43,7 +48,8 @@ img {
   font-size: 3em;
   font-weight: bold;
   text-align: center;
-  margin-top: 0;
+  margin-top: 20px;
+  margin-bottom: 5px;
   padding-top: 0;
 }
 .reset-text{
@@ -92,29 +98,26 @@ img {
 @media(min-width:650px) {
 
   .btn-reset{
-
-    width: 20%;
+    width: 25%;
   }
 
-  .reset-form{
+  #reset-section form{
     margin: 0px 30%;
   }
-
 
 }
 
 @media(min-width:1200px) {
 
   .btn-reset{
-
-    width: 10%;
+    width: 30%;
   }
 
-  .reset-form{
+  #reset-section form{
     margin: 0px 40%;
   }
   .reset-items{
-    width: 100%;
+    width: 110%;
   }
 
 }
