Centrando atuendo new

--- a/app/views/atuendos/new.html.erb
+++ b/app/views/atuendos/new.html.erb
@@ -2,7 +2,7 @@
     <div class="btn-go-back-guardarropa">
       <a href="/guardarropas/<%=+params[:guardarropa_id]%>"><i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i></a>
     </div>
-      <div>
+      <div class="atuendo-div-all">
         <div class="form-atuendo-new">
           <h2 class="atuendos-title">Crea un atuendo</h2>
 
