--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -165,6 +165,9 @@ img {
   max-width: 300px;
 }
 
+.atuendo-div-all{
+  margin: 0px 8%;
+}
 #atuendo-new{
   width:100vw;
   padding-top: 15px;
@@ -232,7 +235,7 @@ img {
 
 .no-item-message{
   color: red;
-  font-size: 2em;
+  font-size: 1.5em;
   padding: 0px 16%;
   text-transform: none;
 
