--- a/app/views/atuendos/generated.html.erb
+++ b/app/views/atuendos/generated.html.erb
@@ -2,7 +2,7 @@
   <div>
     <div>
       <div>
-        <h2>Completá la info de tu atuendo!</h2>
+        <h2>Completá la info de tu atuendo</h2>
         <%= form_for @atuendo, :url => { :action => "update" , :id => @atuendo.id}, :method => :put do |f| %>
           <div>
             <%= f.label :nombre, {:class => ''} %>
