--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -128,6 +128,8 @@ img {
   display: flex;
   align-items: center;
   flex-direction: column;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .prenda-only-one-icons a{
