--- a/app/views/atuendos/generate.html.erb
+++ b/app/views/atuendos/generate.html.erb
@@ -9,24 +9,28 @@
         <%= form_for @atuendo, :url => { :action => "create" } do |f| %>
 
           <div>
-            <%= f.label :nombre, class: 'atuendos-form-title' %> <br />
+            <%= f.label :nombre, class: 'atuendos-form-title' %> <br/>
             <%= f.text_field :nombre, class: 'atuendos-form-items' %>
           </div>
-
           <div>
             <div>
+              <%= f.label :cabeza_id, class: 'atuendos-form-title' %> <br/>
               <%= render 'prenda', prenda: @prenda_cabeza %>
               <%= f.hidden_field :cabeza_id, :value => @prenda_cabeza.id %>
             </div>
+
             <div>
+              <%= f.label :prenda_id, class: 'atuendos-form-title' %> <br/>
               <%= render 'prenda', prenda: @prenda_torso %>
               <%= f.hidden_field :torso_id, :value => @prenda_torso.id %>
             </div>
             <div>
+              <%= f.label :piernas_id, class: 'atuendos-form-title' %> <br/>
               <%= render 'prenda', prenda: @prenda_piernas %>
               <%= f.hidden_field :piernas_id, :value => @prenda_piernas.id %>
             </div>
             <div>
+              <%= f.label :pies_id, class: 'atuendos-form-title' %> <br/>
               <%= render 'prenda', prenda: @prenda_pies%>
               <%= f.hidden_field :pies_id, :value => @prenda_pies.id %>
             </div>
@@ -49,21 +53,18 @@
 
             <div>
               <div>
-                <%= f.label :estacion_tag, class: 'atuendos-form-title' %><br />
-                <%= f.select(:estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a),{required:false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
+                <%= f.select(:estacion_tag, options_for_select({ "Verano 🏖️" => "verano", "Invierno ❄️" => "invierno",  "Primavera 🌸" => "primavera", "Otonio 🍁" => "otonio" }),{ :prompt => "Seleccione la estacion"}, {:required => true,:class => 'atuendos-form-items'})%>
               </div>
               <div>
-                <%= f.label :tiempo_tag, class: 'atuendos-form-title' %><br />
-                <%= f.select(:tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
+                <%= f.select(:tiempo_tag, options_for_select({ "Dia 🌞" => "dia", "Noche 🌜" => "noche" }),{:prompt => "Seleccione el horario del día"}, {:required => true,:class => 'atuendos-form-items'})%>
               </div>
               <div>
-                <%= f.label :ocasion_tag, class: 'atuendos-form-title' %><br />
-                <%= f.select(:ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
+                <%= f.select(:ocasion_tag, options_for_select({ "Formal 🤵🏻" => "formal", "Informal 🧍🏻‍♂️" => "informal" }),{:prompt => "Seleccione la ocasión"}, {:required => true,:class => 'atuendos-form-items'})%>
               </div>
             </div>
             <div>
               <div>
-                <%= f.label :descripcion, class: 'atuendos-form-title' %><br /> <%= f.text_area(:descripcion, {:class => 'atuendos-form-items'}) %>
+                <%= f.label :descripcion, class: 'atuendos-form-title' %><br/> <%= f.text_area(:descripcion, {:class => 'atuendos-form-items'}) %>
               </div>
 
               <%= f.number_field :user_id, value:current_user.id, type: :hidden %>
